--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -1,11 +1,32 @@
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons';
 
+html, body {
+  height: 100%;
+  background-color: #333;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  color: #fff;
+  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+}
+
+body > div {
+  width: 100%;
+}
+
+a, a:focus, a:hover {
+  color: #fff;
+}
+
 .bg_primary-color {
-  background-color: #FFFFFF;
+  background-color: #333;
 }
 .primary-color {
-  background-color: #FFFFFF;
+  background-color: #FFF;
 }
 .bg_secondary-color {
   background-color: #293241;
@@ -32,4 +53,36 @@
   height: 100%;
   width: 100%;
   opacity: 0.4;
+}
+
+.outbound-container {
+  max-width: 42em;
+}
+
+.custom-header {
+  margin-bottom: 1rem;
+  @media (min-width: 750px) {
+    .brand-name {
+      float: left;
+    }
+    .nav-header {
+      float: right;
+    }
+  }
+  .nav-header {
+    .nav-link {
+      padding: .25rem 0;
+      font-weight: 700;
+      color: rgba(255, 255, 255, .5);
+      background-color: transparent;
+      border-bottom: .25rem solid transparent;
+      & + .nav-link {
+        margin-left: 1rem;
+      }
+    }
+    .active {
+      color: #fff;
+      border-bottom-color: #fff;
+    }
+  }
 }
