--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -10,12 +10,15 @@ body {
   display: flex;
   justify-content: center;
   color: #fff;
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
 
 body > div {
   width: 100%;
+}
+
+.pointer {
+  cursor: pointer;
 }
 
 a, a:focus, a:hover {
