--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -89,3 +89,63 @@ a, a:focus, a:hover {
     }
   }
 }
+
+.video-list {
+  max-height: 80vh;
+  overflow-y: auto;
+}
+
+.video-component {
+  max-width: 70vw;
+  margin: auto;
+  max-height: 250px;
+  &:not(:hover) {
+    opacity: .92;
+  }
+  .video-container {
+    flex-direction: column;
+    @media (min-width: 750px) {
+      flex-direction: row;
+    }
+    height: 100%;
+    max-height: 150px;
+    .video-image {
+      width: 100%;
+      @media (min-width: 750px) {
+        width: 45%;
+      }
+    }
+    .video-info {
+      width: 100%;
+      @media (min-width: 750px) {
+        width: 55%;
+      }
+      .video-description-wrapper {
+        overflow: hidden;
+        .video-description {
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          height: 100%;
+          max-height: 95px;
+          //text-wrap: wrap;
+        }
+      }
+    }
+  }
+}
+
+.my-mail {
+  position: relative;
+  span {
+    position: absolute;
+    background: red;
+    width: 15px;
+    height: 15px;
+    right: -10px;
+    top: 1px;
+    border-radius: 50%;
+    color: white;
+    font-size: 10px;
+  }
+}
